--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     </head>
     <body>
         <main class="container">
-            <h1>Yay JavaScript!</h1>
-
-            
+            <h1>Yay JavaScript!</h1>  
         </main>
-        
+         <script src="js/script.js">
+            //prototype only </script>          
     </body>
 </html>
